--- a/public/list.html
+++ b/public/list.html
@@ -10,6 +10,15 @@
     <div class="container">
         <h1>コーヒー豆リスト</h1>
         <ul id="inventory-list" class="list-group"></ul>
+        <form id="add-bean-form" class="mt-3">
+            <div class="mb-3">
+              <label for="variety" class="form-label">豆の名前</label>
+              <input type="text" class="form-control" id="variety" required>
+            </div>
+            <!-- 他のフォームフィールドを追加 -->
+            <button type="submit" class="btn btn-primary">追加</button>
+          </form>
+          
         <a href="index.html" class="btn btn-primary mt-3">戻る</a>
         <script src="frontend.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
